--- a/ng-route-experiments/public/views/index.html
+++ b/ng-route-experiments/public/views/index.html
@@ -9,14 +9,14 @@
     <!-- load bootstrap and fontawesome via CDN -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css">
-    <style>
-        body { padding-top:50px; }
-    </style>
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <!-- JS -->
     <!-- load angular and angular-route -->
     <script src="../js/angular.min.js"></script>
     <script src="../js/angular-route.min.js"></script>
+    <script src="../js/angular-animate.min.js"></script>
     <!-- load our custom angular app files -->
     <script src="../js/app.js"></script>
     <script src="../js/app.routes.js"></script>
@@ -40,7 +40,9 @@
 
     <!-- MAIN CONTENT AND INJECTED VIEWS -->
     <main>
-        <div ng-view></div>
+        <div id="content-views">
+            <div ng-view></div>
+        </div>
     </main>
 
 </body>
